@@ -192,7 +192,7 @@ make_good_string(char *str)
 	*optr='\0';
 
 #ifdef USE_ICONV
-	free(str);
+	if ( encoding ) free(str);
 #endif
 
 	return result;
@@ -245,7 +245,7 @@ protect_quotes_string(char *str)
 	*optr='\0';
 
 #ifdef USE_ICONV
-	free(str);
+	if ( encoding ) free(str);
 #endif
 
 	return result;
@@ -1663,6 +1663,9 @@ utf8 (const char *fromcode, char *inputbuf)
 
 /**********************************************************************
  * $Log$
+ * Revision 1.97  2005/09/30 08:59:29  strk
+ * Fixed release of stack memory occurring when shp2pgsql is compiled with USE_ICONV defined, an attribute value needs to be escaped and no -W is used
+ *
  * Revision 1.96  2005/08/29 22:36:25  strk
  * Removed premature object destruction in InsertLineString{WKT,} causing segfault
  *
